syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service SecurityLoginsRole{
	rpc GetSecurityLoginsRole(SecLoginsRoleIdRequest) returns (SecLoginsRoleProto);
    rpc GetAllSecurityLoginsRole(google.protobuf.Empty) returns(SecLoginsRoleArray);
	rpc UpdateSecurityLoginsRole(SecLoginsRoleArray) returns (google.protobuf.Empty);
	rpc CreateSecurityLoginsRole(SecLoginsRoleArray) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsRole(SecLoginsRoleArray) returns (google.protobuf.Empty);
}

message SecLoginsRoleIdRequest{
	string Id = 1;
}
message SecLoginsRoleProto{
        string Id = 1;
        string Login = 2;
        string Role = 3;
}
message SecLoginsRoleArray{
    repeated SecLoginsRoleProto SecLoginsRole = 1;
}
